# prosight-dev-test-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
apps/locus/: admin.py  apps.py  filters.py  models.py  pagination.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/locus/management/commands/: bootstrap_users.py
config/: dbrouters.py  settings.py  test_settings.py  urls.py
tests/: conftest.py  factories.py  test_locus_api.py
